[workspace]
members = [
    "fastjob",
    "fastjob-client",
    "fastjob-admin",
    "components/alarm",
    "components/app",
    "components/app/core",
    "components/app/scheduler",
    "components/app/worker",
    "components/error",
    "components/error",
    "components/metrics",
    "components/tracing",
    "components/utils",
    "components/storage",
    "components/log",
    "components/container",
    "components/workflow",
]

[profile.dev]
debug = false
[profile.test]
debug = false