[workspace]
members = [
    "fastjob",
    "fastjob-admin",
    "components/alarm",
    "components/scheduler",
    "components/worker",
    "components/metrics",
    "components/utils",
    "components/storage",
    "components/log",
    "components/container",
    "components/workflow",
]

[profile.dev]
debug = false
[profile.test]
debug = false