[package]
name = "fastjob"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["multicore"]
multicore = ["tokio/rt-multi-thread","num_cpus"]

[dependencies]
tokio = "1.5.0"
tracing = "0.1.23"
num_cpus = { version = "1", optional = true }
fastjob-components-app = {path = "../components/app"}
fastjob-components-utils = {path = "../components/utils"}