[package]
name = "fastjob"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["multicore"]
multicore = ["tokio/rt-multi-thread","num_cpus"]

[dependencies]
structopt = "0.3"
tokio = "1.5.0"
tracing = "0.1.23"
toml = "0.5"
num_cpus = { version = "1", optional = true }
fastjob-components-app = {path = "../components/app"}
fastjob-components-utils = {path = "../components/utils"}
fastjob-components-worker = { path = "../components/app/worker" }
fastjob-components-core = { path = "../components/app/core" }