[package]
name = "fastjob"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["multicore"]
multicore = ["tokio/rt-multi-thread","num_cpus"]

[dependencies]
futures = "0.3.9"
grpcio = "0.8.0"
grpcio-health = "0.8.0"
snafu = "0.6.10"
structopt = "0.3"
tokio = "1.5.0"
tracing = "0.1.23"
tracing-subscriber = "0.2"
toml = "0.5"
num_cpus = { version = "1", optional = true }
fastjob-proto = { git = "https://github.com/eliasyaoyc/fastjob-proto" }
fastjob-components-log = {path = "../components/log"}
fastjob-components-utils = {path = "../components/utils"}
fastjob-components-worker = { path = "../components/worker" }
fastjob-components-storage = { path = "../components/storage" }
