[package]
name = "fastjob-components-app"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt"] }
structopt = "0.3"
tracing = "0.1.23"
fastjob-components-error = { path = "../error" }
fastjob-components-utils = { path = "../utils" }
fastjob-components-worker = { path = "./worker" }
fastjob-components-core = { path = "./core" }
fastjob-proto = { git = "https://github.com/eliasyaoyc/fastjob-proto" }
fastjob-components-log = { path = "../log" }