[package]
name = "fastjob-components-scheduler"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastjob-components-utils = { path = "../utils" }
snafu = "0.6.10"
crossbeam-utils = "0.8.1"
delay_timer = "0.5.0"
