[package]
name = "fastjob-components-scheduler"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6.10"
crossbeam = "0.8.0"
delay_timer = { version = "0.5.0", features = ["full"] }
parking_lot = "0.11.1"

fastjob-components-log = { path = "../log" }
fastjob-components-utils = { path = "../utils" }
fastjob-components-storage = { path = "../storage" }

