[package]
name = "fastjob-components-stack"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.9"
tokio = { version = "1", features = ["time"] }
tower = { version = "0.4.3", features = ["filter", "util"] }
tracing = "0.1"

[dev-dependencies]
tower-test = "0.4"
tokio-test = "0.4"
tracing-subscriber = "0.2.16"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }