[package]
name = "fastjob-components-storage"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = "0.2"
rbatis = { version = "1.8" }
## logging lib(required)
log = "0.4"
fast_log="1.3"
fastjob-components-utils = { path = "../utils" }