[package]
name = "fastjob-components-utils"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
nix = "0.11"
snafu = "0.6.10"
time = "0.1.42"
[target.'cfg(unix)'.dependencies]
signal = "0.6"
futures = "0.3.7"

tokio = { version = "1", features = ["macros", "signal"] }
tracing = "0.1.23"
yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
