[package]
name = "fastjob-components-worker"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
tokio = { version = "1", features = ["rt", "time", "net"] }
snafu = "0.6.10"
grpcio = "0.8.0"
grpcio-health = "0.8.0"
dashmap = "4.0.2"
num_cpus = "1"
fastjob-components-storage = { path = "../storage" }
fastjob-proto = { git = "https://github.com/eliasyaoyc/fastjob-proto" }
fastjob-components-log = { path = "../log" }
fastjob-components-utils = { path = "../utils" }
fastjob-components-scheduler = { path = "../scheduler" }
chrono = "0.4.19"
