[package]
name = "fastjob-components-worker"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
tokio = { version = "1", features = ["rt", "time", "net"] }
snafu = "0.6.10"
grpcio = "0.8.0"
grpcio-health = "0.8.0"
dashmap = "4.0.2"
num_cpus = "1"
chrono = "0.4.19"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = "2.3"
async-channel = "1.6.1"
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
fastjob-components-storage = { path = "../storage" }
fastjob-proto = { git = "https://github.com/eliasyaoyc/fastjob-proto" }
fastjob-components-log = { path = "../log" }
fastjob-components-utils = { path = "../utils" }
fastjob-components-scheduler = { path = "../scheduler" }
