[package]
name = "fastjob-components-core"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
http = "0.2"
http-body = "0.4"
futures = "0.3.9"
indexmap = "1.0"
ipnet = "2.0"
regex = "1.0.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "sync", "parking_lot"] }
tokio-stream = { version = "0.1.5", features = ["time"] }
tracing = "0.1.23"
grpcio = "0.8.0"
grpcio-health = "0.8.0"
snafu = "0.6.10"
fastjob-proto = { git = "https://github.com/eliasyaoyc/fastjob-proto" }

fastjob-components-error = { path = "../../error" }
fastjob-components-storage = { path = "../../storage" }
fastjob-components-log = { path = "../../log" }
fastjob-components-scheduler = { path = "../scheduler" }
fastjob-components-metrics = { path = "../../metrics" }
fastjob-components-alarm = { path = "../../alarm" }
fastjob-components-worker = { path = "../worker" }
fastjob-components-utils = { path = "../../utils" }