[package]
name = "fastjob-components-server"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastjob-components-core = { path = "../core" }
fastjob-components-error = { path = "../../error" }