[package]
name = "fastjob-components-worker"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastjob-components-resouce-constraints = { path = "../../resouce-constraints" }