[package]
name = "fastjob-components-worker"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
tokio = { version = "1", features = ["rt", "time", "net"] }
cron = "0.9.0"
yatp = {git = "https://github.com/tikv/yatp", branch = "master"}
fastjob-components-resouce-constraints = { path = "../../resouce-constraints" }
fastjob-components-error = { path = "../../error" }
fastjob-components-storage = { path = "../../storage" }
fastjob-proto = { git = "https://github.com/eliasyaoyc/fastjob-proto" }